<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="setUserProfile"
        android:title="@string/set_title">
        <EditTextPreference
            android:capitalize="none"
            android:inputType="textNoSuggestions"
            android:key="setUsername"
            android:summary="@string/set_user_name_summary"
            android:text=""
            android:title="@string/set_user_name" />
        <EditTextPreference
            android:capitalize="none"
            android:inputType="textNoSuggestions"
            android:key="setHostname"
            android:summary="@string/set_host_name_summary"
            android:text=""
            android:title="@string/set_host_name" />
        <EditTextPreference
            android:capitalize="none"
            android:inputType="textNoSuggestions"
            android:key="setApiKey"
            android:persistent="true"
            android:summary="@string/set_api_key_summary"
            android:text=""
            android:title="@string/set_api_key" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="useReactions"
            android:selectable="true"
            android:summary="@string/set_reactions_summary"
            android:title="@string/set_reactions"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="connStatus"
            android:selectable="false"
            android:summary="@string/conn_status_summary"
            android:title="@string/conn_status"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:key="set_sharing"
        android:title="@string/set_behavior">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="setImageReduce"
            android:summary="@string/set_image_reduce_summary"
            android:title="@string/set_image_reduce" />
    </PreferenceCategory>
</PreferenceScreen>